--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "@me-tool/eslint-prettier-config",
   "description": "Base repository for eslint + prettier configuration for other projects",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
-  "author": "",
-  "files": [
-    "index.js",
-    ".prettierrc.js",
-    "react.js"
-  ],
+  "author": "halo xie",
+  "private": false,
+  "exports": {
+    ".": "./index.js",
+    "./.editorconfig": "./.editorconfig",
+    "./.prettierrc.js": "./.prettierrc.js",
+    "./vscode.settings.prettier.jsonc": "./vscode.settings.prettier.jsonc"
+  },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "confusing-browser-globals": "^1.0.11",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.5.0"
   },
   "peerDependencies": {
-    "eslint": "^8.11.0",
-    "prettier": "^2.6.1",
-    "typescript": "^4.6.3"
+    "eslint": "^8.13.0",
+    "prettier": "^2.6.1"
   },
   "homepage": "https://github.com/me-tool/eslint-prettier-config#readme",
   "bugs": {
@@ -32,6 +32,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/me-tool/eslint-prettier-config.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "license": "ISC"
 }
