--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "engines": {
+    "node": ">= 12.13.1",
+    "npm": ">= 5.6.0"
+  },
   "license": "ISC"
 }
